# dota2-rpc-client

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  angular.json  conanfile.txt  index.html  main.5520905aa9306aa7.js  main.854e4faa13be4462.js  main.a4eceb633352fd69.js  main.cc  package-lock.json  package.json  polyfills.caeecf7a2451a910.js  polyfills.f2a2429a75c3be84.js  runtime.21f9a39bfb9e1d4a.js  scripts.814dc55ba786ad48.js  scripts.9455108e0c24192d.js  styles.4a0a992422ab3e8c.css  styles.7406f3905b421f12.css  vcpkg.json
.github/ISSUE_TEMPLATE/: 10_BUG_ISSUE.yml  20_FEATURE_REQUEST.yml  30_TRANSLATION_PROPOSAL.yml
.github/workflows/: build.yml  gh-pages.yml
controllers/: Listener.cc  Listener.h
include/extensions/: StringExtensions.h
include/managers/: ConfigurationManager.h  LanguageManager.h  SteamManager.h  WebServerManager.h
include/persistence/: FileLoader.h  JsonLoader.h  TemplateLoader.h
include/services/: DiscordService.h  DotaService.h
lang/: en-us.json  es-es.json  fa-ir.json  ja-jp.json  pt-br.json  ru-ru.json  th-th.json  uk-ua.json
scripts/: install-service.sh  install.windows.bat  uninstall-service.sh  uninstall.windows.bat
scripts/service/: dota2-rpc-client.service
services/: DiscordService.cpp  DotaService.cpp
src/: CMakeLists.txt  index.html  styles.scss
src/app/: app.component.ts  app.module.ts
src/app/ui/index/: index.component.html  index.component.scss  index.component.ts
src/assets/css/: main.css
src/extensions/: StringExtensions.cpp
src/localization/: LocalizedStrings.cpp
src/managers/: ConfigurationManager.cpp  LanguageManager.cpp  SteamManager.cpp  WebServerManager.cpp
src/persistence/: FileLoader.cpp  JsonLoader.cpp  TemplateLoader.cpp
src/services/: DiscordService.cpp  DotaService.cpp
src/templates/: Templates.cpp
src/templates/config/: config.json
src/templates/templates/: gamestate_integration_rpc.cfg
utils/: CFGJSON.hpp  GlobalStrings.cpp  NamesDota2.hpp  StringExtensions.cpp
web/: angular.json  package-lock.json  package.json
web/src/: index.html  main.ts  styles.scss
web/src/app/components/code-with-clipboard/: code-with-clipboard.component.html  code-with-clipboard.component.scss  code-with-clipboard.component.ts
web/src/app/ui/index/: index.component.html  index.component.scss  index.component.ts
